--- a/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/structure/page/basepage/head.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/structure/page/basepage/head.html
@@ -3,7 +3,7 @@
 
 	<title>${pageProperties.jcr:title}</title>
 	<sly data-sly-include="customheaderlibs.html"></sly>
-	<sly data-sly-call="${clientLib.css @ categories=['highmark.main','highmark.components.content','core.wcm.components']}"/>
+	<sly data-sly-call="${clientLib.css @ categories=['fittanylion.main','fittanylion.components.content','core.wcm.components']}"/>
 	<sly data-sly-include="/libs/wcm/core/components/init/init.jsp"/>
 	<sly data-sly-include="/libs/cq/cloudserviceconfigs/components/servicelibs/servicelibs.jsp"/>
 	<sly data-sly-include="/libs/wcm/core/browsermap/browsermap.jsp"/>
