--- a/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/structure/page/basepage/body.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/structure/page/basepage/body.html
@@ -1,4 +1,4 @@
-<body>
+<body id="fittanyLion" ng-app>
     
    <sly data-sly-include="header.html" ></sly>
    <sly data-sly-include="content.html" ></sly>
