--- a/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/content/angular/angular.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/content/angular/angular.html
@@ -1,4 +1,4 @@
-<div ng-app>
+<div >
             <p>Enter a value: <input type="text" ng-model="name">
             <p ng-bind="name"></p>
              <div ng-view></div>
