--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/fittanylion/content/globalcolor.less
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/fittanylion/content/globalcolor.less
@@ -100,7 +100,9 @@ span.link-clr_white:hover {
 	background-color:transparent;
  }
 
-
+ .global-fittanyblue{
+    background-color: #081d3a;
+ }
 
 
 /*************** Global colors for color ***********/
