--- a/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/content/angular/angular.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/content/angular/angular.html
@@ -1,21 +1,32 @@
-<div >
-            <p>Enter a value: <input type="text" ng-model="name">
-            <p ng-bind="name"></p>
-             <div ng-view></div>
-            <ul class="menu">
-                <li><a ng-click="currentTpl1='/tpl1.html'">Template Load example</a>
-                <li><a ng-click="currentTpl1='/tpl2.html'">Reading form template.html</a>
-            </ul>
-           <div ng-view></div>
-            <div id="tpl-content"> <ng-include src="currentTpl1"> </ng-include> </div>
-            <script type="text/ng-template" id="/tpl1.html">
-                <p> First name: <input class="border" type="text" ng-model="firstname"/>
-                    Last name: <input class="border" type="text" ng-model="lastname"/>
-                    </p>
-                    <p>First name:<p ng-bind="firstname"></p>
-                    <p>Last name:<p ng-bind="lastname"></p>
-            </script>
-            <script type="text/ng-template" id="/tpl2.html"  data-sly-include="template.html">
 
-            </script >
-        </div>
+
+
+
+
+<div ng-controller="myCtrl" class="container-fluid hero_container">	
+<h1>This is STatsus Code:{{statuscode}}</h1>
+<div ng-init="myVar=false" ng-if="myVar">
+<div class="loader"></div>
+</div>
+					<div class="col-sm-12">
+						<form role="form" name="fittanylogin" novalidate ng-submit="fittanylogin.$valid && loginNotify()">
+							<div class="row">
+								<div class="col-sm-12 col-md-6">
+									<div class="form-group custom-form-group">
+										<input placeholder="Email Address" type="email" name="email" id="email" class="form-control custom-input" ng-model="email"  required/>
+					<span style="color:red" ng-show="(fittanylogin.email.$dirty && fittanylogin.email.$invalid) || (fittanylogin.$submitted && fittanylogin.email.$invalid)">
+						<span ng-show="fittanylogin.email.$error.required">Email is required.</span>
+						<span ng-show="fittanylogin.email.$error.email">Invalid email address.</span>
+						</span>
+									</div>
+								</div>
+								<div class="col-sm-12 col-md-6">
+									<div class="form-group">
+										<button class="btn btn-default btn-lg fittany_form_button">GET NOTIFIED</button>
+									</div>
+								</div>					
+							</div>		
+						</form>
+					</div>
+</div>
+
