--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/fittanylion/content/all.css
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/fittanylion/content/all.css
@@ -1,3 +1,31 @@
+.loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
 .border{
     border: 3px solid blue;
 }
@@ -217,6 +245,16 @@ ul li, ol li {
 }
 /** Tablet padding:768px to 1024px **/
  @media screen and (min-width: 768px) and (max-width:1024px) {
+
+    .hero_container{
+	margin-left:0 !important;
+	margin-right:0 !important;
+	padding-left:0 !important;
+	padding-right:0 !important;
+	position:relative;
+	top:0;
+
+}
     /** tablet vertical padding **/
      .tab-ten-padding{
          padding-top: 10px;
