angulat html changes

--- a/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/content/angular/angular.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/content/angular/angular.html
@@ -5,7 +5,7 @@
 
 <div ng-controller="myCtrl" class="container-fluid hero_container">	
 <h1>This is STatsus Code:{{statuscode}}</h1>
-<div ng-init="myVar=false" ng-if="myVar">
+<div ng-init="loadingclass=false" ng-if="loadingclass">
 <div class="loader"></div>
 </div>
 					<div class="col-sm-12">
