--- a/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/content/angular/angular.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/content/angular/angular.html
@@ -3,30 +3,39 @@
 
 
 
-<div ng-controller="landingPageEmail" class="container-fluid hero_container">	
-<h1>This is STatsus Code:{{statuscode}}</h1>
-<div ng-init="loadingclass=false" ng-if="loadingclass">
-<div class="loader"></div>
-</div>
-					<div class="col-sm-12">
-						<form role="form" name="fittanylogin" novalidate ng-submit="fittanylogin.$valid && loginNotify()">
-							<div class="row">
-								<div class="col-sm-12 col-md-6">
-									<div class="form-group custom-form-group">
-										<input placeholder="Email Address" type="email" name="email" id="email" class="form-control custom-input" ng-model="email"  required/>
-					<span style="color:red" ng-show="(fittanylogin.email.$dirty && fittanylogin.email.$invalid) || (fittanylogin.$submitted && fittanylogin.email.$invalid)">
-						<span ng-show="fittanylogin.email.$error.required">Email is required.</span>
-						<span ng-show="fittanylogin.email.$error.email">Invalid email address.</span>
-						</span>
-									</div>
-								</div>
-								<div class="col-sm-12 col-md-6">
-									<div class="form-group">
-										<button class="btn btn-default btn-lg fittany_form_button">GET NOTIFIED</button>
-									</div>
-								</div>					
-							</div>		
-						</form>
-					</div>
-</div>
+<<div ng-controller="landingPageEmail" class="container-fluid hero_container">	
 
+	<h1>This is STatsus Code:{{statuscode}}</h1>
+	
+	<div>
+	{{myWelcome.errorcode}}
+	</div>
+	
+	<div ng-if="loadingclass">
+	<div class="loader"></div>
+	</div>
+						<div class="col-sm-12">
+							<form role="form" name="fittanylogin" novalidate ng-submit="fittanylogin.$valid && loginNotify()">
+								<div class="row">
+									<div class="col-sm-12 col-md-6">
+										<div class="form-group custom-form-group">
+											<input placeholder="Email Address" ng-pattern="emailFormat" type="email" name="email" id="email" class="form-control custom-input" ng-model="email"  required/>
+						<span style="color:red" ng-show="(fittanylogin.email.$dirty && fittanylogin.email.$invalid) || (fittanylogin.$submitted && fittanylogin.email.$invalid)">
+							<span ng-show="fittanylogin.email.$error.required">Email is required.</span>
+							<span ng-show="fittanylogin.email.$error.pattern">Invalid email address.</span>
+							</span>
+	
+	
+										</div>
+									</div>
+									<div class="col-sm-12 col-md-6">
+										<div class="form-group">
+											<button class="btn btn-default btn-lg fittany_form_button">GET NOTIFIED</button>
+										</div>
+									</div>					
+								</div>		
+							</form>
+						</div>
+	</div>
+	
+	
