--- a/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/content/angular/angular.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/content/angular/angular.html
@@ -1,9 +1,4 @@
-
-
-
-
-
-<<div ng-controller="landingPageEmail" class="container-fluid hero_container">	
+<div ng-controller="landingPageEmail" class="container-fluid hero_container">	
 
 	<h1>This is STatsus Code:{{statuscode}}</h1>
 	
