--- a/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/content/angular/angular.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/content/angular/angular.html
@@ -1,10 +1,7 @@
 <div ng-controller="landingPageEmail" class="container-fluid hero_container">	
 
-	<h1>This is STatsus Code:{{statuscode}}</h1>
+	<h2>This is Status Code:{{statuscode}}</h2>
 	
-	<div>
-	{{myWelcome.errorcode}}
-	</div>
 	
 	<div ng-if="loadingclass">
 	<div class="loader"></div>
