removing and angular and unwanted

--- a/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/structure/page/basepage/head.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/fittanylion/components/structure/page/basepage/head.html
@@ -8,7 +8,7 @@
 	<sly data-sly-include="/libs/cq/cloudserviceconfigs/components/servicelibs/servicelibs.jsp"/>
 	<sly data-sly-include="/libs/wcm/core/browsermap/browsermap.jsp"/>
 	<sly data-sly-include="/libs/wcm/mobile/components/simulator/simulator.jsp"/>
-    <sly data-sly-call="${clientLib.js @ categories=['angularjsclientlib']}"/>
+    <!--<sly data-sly-call="${clientLib.js @ categories=['angularjsclientlib']}"/>-->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1.0">
     
