--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/landingpageemail/landingpageemail.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/landingpageemail/landingpageemail.html
@@ -1,21 +1,20 @@
 <sly data-sly-use.template="/apps/hha/dmxfla/empty-template.html"     data-sly-call="${template.placeholder}"></sly>
-<div  class="container-fluid hero_container">	
+<div id="mainwrapper" class="container-fluid hero_container">	
 
-
-	
-						<div class="col-sm-12">
-							<form role="form" name="fittanylogin"">
+						<div id="fittanylandingpage" class="col-sm-12">
+							<form role="form"  name="fittanylogin"">
 								<div class="row">
 									<div class="col-sm-12 col-md-8">
 										<div class="form-group custom-form-group">
-											<input placeholder="Email Address"  type="email" name="email" id="email" class="form-control custom-input fittany_form_input" required/>
+											<input placeholder="Email Address"  type="email" name="email" id="email" class="form-control custom-input fittany_form_input" />
 
 	
 										</div>
 									</div>
 									<div class="col-sm-12 col-md-4">
 										<div class="form-group">
-											<button class="btn btn-default btn-lg fittany_form_button">GET NOTIFIED</button>
+                                              <input type="submit" class="btn btn-default btn-lg fittany_form_button" value="GetNotified">
+
 										</div>
 									</div>					
 								</div>		
