--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/button.less
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/button.less
@@ -57,8 +57,7 @@
      letter-spacing: .2px;
      text-align: center;
      overflow: hidden;
-
-    padding: 8px;
+     padding: 8px;
 }
 
 
@@ -76,15 +75,13 @@
      letter-spacing: .2px;
      text-align: center;
      overflow: hidden;
-
-    padding: 8px;
+     padding: 8px;
 }
  .button-signup-sm{
 
      text-decoration: none;
      display: inline-block;
      margin-right: 10px;
-
      width: 100%;
      height: 47px;
      font-size: 14px;
@@ -92,7 +89,6 @@
      letter-spacing: .2px;
      text-align: center;
      overflow: hidden;
-
      padding: 14px;
 }
  .button-signup-lg{
@@ -102,13 +98,13 @@
      margin-right: 10px;
      width: 100%;
      height: 55px;
-     font-size: 14px;
+     font-size: 18px;
+     font-weight:500;
      line-height: 1.25;
      letter-spacing: .2px;
      text-align: center;
      overflow: hidden;
-
-    padding: 18px;
+     padding: 18px;
 }
 
 
