--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/globalcolor.less
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/globalcolor.less
@@ -24,7 +24,9 @@ span.link-clr_white:hover {
 .global-white{
     background-color: #ffffff;
 }
-
+.global-light_grey{
+   background-color:#ccc;
+}
 .global-christian_grey{
     background-color: #39454e;
 }
@@ -96,13 +98,14 @@ span.link-clr_white:hover {
 .global-scarlet{
     background-color:  #e31b23;
 }
+.global-pennstate-blue{
+    background-color:#071d38;
+}
 .background-none{
 	background-color:transparent;
  }
 
- .global-fittanyblue{
-    background-color: #081d3a;
- }
+
 
 
 /*************** Global colors for color ***********/
@@ -181,4 +184,7 @@ span.link-clr_white:hover {
 
 .global-clr_blood{
    color: #781419;
+}
+.global-clr_pennstate-blue{
+    color:  #071d38;
 }
