--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/all.css
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/all.css
@@ -131,7 +131,7 @@ a {
          padding-left: 10px;
          padding-right: 10px;
     }
-    .horizontal-fifteen-padding{
+	.horizontal-fifteen-padding{
          padding-left: 15px;
          padding-right: 15px;
     }
@@ -180,7 +180,30 @@ a {
          margin-left: 50px;
         margin-right: 50px;
     }
-
+h1 {
+    font-size: 48px;
+    line-height: 58px;
+}
+h2 {
+    font-size: 38px;
+    line-height: 48px;
+}
+h3 {
+    font-size: 28px;
+    line-height: 38px;
+}
+h4 {
+    font-size: 24px;
+    line-height: 34px;
+}
+h5 {
+    font-size: 20px;
+    line-height: 30px;
+}
+p {
+    font-size: 18px;
+    line-height: 30px;
+}
 
 ul, ol {
     padding-left: 30px;
@@ -282,9 +305,9 @@ ul li, ol li {
 }
 /** mobile 767px and less padding **/
  @media screen and (max-width: 767px) {
-        ul, ol {
-         padding-left:0px;
-    }
+    	ul, ol {
+   		 padding-left:0px;
+	}
     /** mobile vertical padding **/
 
     .mob-ten-padding{
@@ -350,7 +373,7 @@ ul li, ol li {
         margin-right: 50px;
     }
  /* mobile horizontal padding */
-    .mobhorz-five-padding{
+	.mobhorz-five-padding{
          padding-left: 5px;
          padding-right: 5px;
     }
@@ -358,7 +381,7 @@ ul li, ol li {
          padding-left: 10px;
          padding-right: 10px;
     }
-    .mobhorz-fifteen-padding{
+	.mobhorz-fifteen-padding{
          padding-left: 15px;
          padding-right: 15px;
     }
@@ -378,9 +401,9 @@ ul li, ol li {
          padding-left: 50px;
          padding-right: 50px;
     }
-    ul, ol {
-        padding-left:0px;
-        font-size: 14px;
+	ul, ol {
+    	padding-left:0px;
+    	font-size: 14px;
      }
 }
 /* MObile End */
@@ -399,15 +422,39 @@ ul li, ol li {
 }
  .input-lg {
      border-radius: 0px;
-     padding-top: 18px;
-     padding-bottom: 18px;
-     height:55px;
 }
  @media screen and (max-width:480px){
      .global-padding{
          padding:5px 0;
     }
-
+     p {
+         font-size: 14px;
+         line-height:14pt;
+    }
+     h2 {
+         font-weight: lighter;
+         font-size: 20pt;
+         line-height: 26pt;
+         text-align: center !important;
+    }
+     h5 {
+         font-size: 18px;
+         line-height: 1.1;
+         text-align: center !important;
+    }
+     h1{
+         text-align: center !important;
+    }
+     h3{
+         text-align: center !important;
+         font-size: 19pt;
+         line-height: 21pt;
+    }
+     h4{
+         text-align: center !important;
+         font-size: 14pt;
+         line-height: 23pt;
+    }
 }
  label{
      text-align: center !important;
@@ -417,7 +464,7 @@ ul li, ol li {
 }
  @media screen and (min-width:481px){
      .global-padding{
-        padding:5px;
+     	padding:5px;
     }
 }
 
@@ -428,56 +475,14 @@ ul li, ol li {
 .section-hero {margin-top:84px;}
 .mobile-container-text-left-align {
      text-align: left;
-    }
+	}
  .mobile-container-text-right-align {
      text-align: right;
-    }
+	}
  .mobile-container-text-center-align {
      text-align: center;
-    }
-.hideinMobile{
-    display:none;
-}
-
-}
-
-@media (min-width:768px){
-.hideinDesk{
-    display:none;
-    }
-
-}
-@media screen and (min-width:768px) and (max-width:1380px){
-    img {
-        width:inherit !important;
-        margin: 0 !important;
-    }
+	}
 }
 ul, ol {
-        list-style-position: outside !important;
-    }
-
-h1 {
-    font-size: 37px;
-}
-h2 {
-    font-size: 34px;
-}
-h3 {
-    font-size: 21px;
-    font-weight:500;
-
-}
-h4 {
-    font-size: 18px;
-    font-weight:500;
-}
-h5 {
-    font-size: 14px;
-    font-weight:500;
-
-}
-p {
-    font-size: 16px;
-    line-height: 25px;
-}	}
+    	list-style-position: outside !important;
+	}
