--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/head.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/head.html
@@ -8,8 +8,16 @@
 	<sly data-sly-include="/libs/cq/cloudserviceconfigs/components/servicelibs/servicelibs.jsp"/>
 	<sly data-sly-include="/libs/wcm/core/browsermap/browsermap.jsp"/>
 	<sly data-sly-include="/libs/wcm/mobile/components/simulator/simulator.jsp"/>
-    <!--<sly data-sly-call="${clientLib.js @ categories=['angularjsclientlib']}"/>-->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1.0">
-    
+
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5SF49SF');</script>
+	<!-- End Google Tag Manager -->
+
+
 </template>
