--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/modalwindow/modalwindow.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/modalwindow/modalwindow.html
@@ -8,7 +8,7 @@
 
   <!-- Modal -->
   <div class="modal fade" id="${properties.listid}" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
     
       <!-- Modal content-->
       <div class="modal-content">
