--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/modalwindow/modalwindow.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/modalwindow/modalwindow.html
@@ -1,8 +1,11 @@
 <sly data-sly-use.template="/apps/hha/dmxfla/empty-template.html"     data-sly-call="${template.placeholder}"></sly>
 
+
+<sly data-sly-test="${wcmmode.edit}">
+     <h4>Please enter a Modal Name and Details</h4>
+  </sly>
+
   <div class="container">
-
-
 
   <a data-toggle="modal" data-target="#${properties.listid}">Open Modal</a>
 
