--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/globalcolor.less
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/globalcolor.less
@@ -188,3 +188,14 @@ span.link-clr_white:hover {
 .global-clr_pennstate-blue{
     color:  #071d38;
 }
+
+
+/**globalcolor.less  bhim **/
+
+.global-pennstate-blue{
+    background-color:#071d38;
+}
+
+.global-clr_pennstate-blue{
+    color:  #071d38;
+}
