--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/head.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/head.html
@@ -10,6 +10,7 @@
 	<sly data-sly-include="/libs/wcm/mobile/components/simulator/simulator.jsp"/>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1.0">
+	<link rel="stylesheet" href="https://use.typekit.net/icd1cmh.css">
 
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
