--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/basepage.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/basepage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-sly-use.head="head.html"
+<html  prefix="og: http://ogp.me/ns#" data-sly-use.head="head.html"
       data-sly-use.footer="footer.html">
 <head data-sly-call="${head.head}"></head>
 <body>
