--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/head.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/head.html
@@ -12,6 +12,16 @@
 	<meta name="viewport" content="initial-scale=1.0">
 	<link rel="stylesheet" href="https://use.typekit.net/icd1cmh.css">
 
+
+	<meta property="og:title" content="some title" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.fittanylion.com/" />
+	<meta property="og:site_name" content="FITTANY">
+	<meta property="og:image" content="path to an image” />
+      <meta property="og:image:width" content="300">
+	<meta property="og:image:height" content="300">
+	<meta property="og:description" content="some description, few sentences. " />
+
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
