--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/all.css
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/all.css
@@ -1,3 +1,16 @@
+#fittany-body .close{
+
+    margin-top: -7px;
+    float: right;
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 5px 0 #fff;
+    filter: alpha(opacity=20);
+    opacity: 2.2;
+
+}
 
 .border{
     border: 3px solid blue;
