--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/login/login-template.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/login/login-template.html
@@ -39,7 +39,7 @@
 						</label>
 					</div>
 					<div class="col-xs-12 padding-top" style="padding-left: 0px">
-						<a href="" style="text-decoration: underline;color:gray;">Forgot your password?</a>
+						<a href="" style="text-decoration: underline;color:gray;" ui-sref="forgotpassword">Forgot your password?</a>
 					</div>
 				</div>
 					
