--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/basepage.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/basepage.html
@@ -2,11 +2,18 @@
 <html data-sly-use.head="head.html"
 data-sly-use.footer="footer.html" prefix="og: http://ogp.me/ns#" style="overflow-x:hidden;">
 <head data-sly-call="${head.head}"></head>
-<body >
 
+<body ng-app="fittanyUiApp" id="fittany-body" style="min-height:100%; top:0px; margin:0;">
 
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SF49SF"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
-<sly data-sly-include="body.html"></sly>
+   
+<sly data-sly-include="content.html" ></sly>
+
 <sly data-sly-call="${footer.footer}"></sly>
 </body>
+
 </html>
