--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/footer.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/footer.html
@@ -1,17 +1,6 @@
-
-
 <template data-sly-template.footer
      data-sly-use.clientLib="/libs/granite/sightly/templates/clientlib.html">
 
-<script src="/etc/clientlibs/dmxfla/clientlibs/angularlibs/angular.js"></script>
-<script src="/etc/clientlibs/dmxfla/clientlibs/angularlibs/ui-router.js"></script>
-<script src="/etc/clientlibs/dmxfla/clientlibs/angularlibs/angular-resource.js"></script>
-<script src="/etc/clientlibs/dmxfla/clientlibs/angularlibs/ui-bootstrap.js"></script>
-
-
-
-<sly data-sly-call="${clientLib.js @ categories=['fittanylion.components.content','core.wcm.components','cq.foundation']}"/>
-<sly data-sly-include="customfooterlibs.html"></sly>
-<sly data-sly-resource="${'cloudservices' @ resourceType='cq/cloudserviceconfigs/components/servicecomponents'}"></sly>
+<sly data-sly-call="${clientLib.js @ categories=['fittanylion.components.content']}"/>
 
 </template>  
