--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/content.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/content.html
@@ -1,1 +1,3 @@
+<div class="hero_container" ui-view>
 <section data-sly-resource="${'section-content' @ resourceType='hha/dmxfla/components/content/layoutcontainer'}"></section>
+   </div>
