--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/uiview-container/uiview-container.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/uiview-container/uiview-container.html
@@ -1,7 +1,9 @@
 <div data-sly-test="${wcmmode.edit}">
 <div><p style="color:red;text-align:center;">This is a ui-view container</p></div>
 </div>
-<div class="hero_container" ui-view></div>
+<div class="hero_container" ui-view>
+<section data-sly-resource="${'section-content' @ resourceType='hha/dmxfla/components/content/layoutcontainer'}"></section>
+   </div>
 
 
 
