forgot pwd changes

--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/forgotpassword/forgotpassword.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/forgotpassword/forgotpassword.html
@@ -1,14 +1,7 @@
-<div class="container" id="forgotpassword_form">
-
-
-	<div class="row" ng-if="!success">
-		<div class="col-xs-12 col-sm-12">
-
-            <h3>Please Enter Your registered Email ID. We will send a link </h3>
+<div class="fittany-form" id="forgotpassword_form">
+	<div ng-if="!success">
 
 			<form role="form" name="forgotpasswordform" novalidate ng-submit="forgotpasswordform.$valid &&  submitForgotPassword(user)">
-
-
 
 				<div class="form-group custom-form-group ">
 					<label for="email" class="input-label" >Email*</label>
@@ -21,11 +14,7 @@
 
 				</div>
 
-
-
-
-
-				<div class="row button-group padding-top padding-bottom">
+        			<div class="row button-group padding-top padding-bottom">
 					<div class="col-xs-12 col-sm-12 padding-top">
 						<button  class="btn btn-default btn-lg custom-buttom" style="">Sign Up</button>
 					</div>
@@ -33,7 +22,8 @@
 				</div>
 				
 			</form>
-		</div>
-		
-	</div>
+		</div>	
+
 </div>
+
+
