forgot password changes

--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/forgotpassword/forgotpassword.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/forgotpassword/forgotpassword.html
@@ -1,5 +1,10 @@
 <div class="fittany-form" id="forgotpassword_form">
-	<div ng-if="!success">
+	<div ng-if="success" class="jumbotron">
+          <h3>We have sent an link to this EMAIL Id.Please click on it to reset pwd<h3>
+       </div>
+       <div ng-if="error" class="jumbotron">
+          <h3>THIS EMAIL IS NOT REGISTERED WITH US</h3>
+       </div>
 
 			<form role="form" name="forgotpasswordform" novalidate ng-submit="forgotpasswordform.$valid &&  submitForgotPassword(user)">
 
@@ -22,7 +27,7 @@
 				</div>
 				
 			</form>
-		</div>	
+
 
 </div>
 
