--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/tasks/tasks.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/tasks/tasks.html
@@ -5,13 +5,13 @@
    
     <div class="row" style="padding-top:25px;">
         <div class="col-xs-12">
-            <h3 class="text-center">Hi {{user.CustomerFirstName}} {{user.CustomerLastName}}</h3>
+            <h3 class="text-center">Hi {{user.customerFirstName}} {{user.customerLastName}}</h3>
         </div>
         <div class="col-xs-12 center-text">
             <p class="text-center">Here are your weekly challenges!</p>
         </div>
     </div>
-
+<progress-circle ></progress-circle>
     <div class="row" style="padding-top:25px;">
         <div class="col-xs-8" style="padding-left:25px;">
             <h4><b>Week [{{currentWeekFn()}}]:</b></h4>
