tasks and spinner

--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/basepage.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/structure/page/basepage/basepage.html
@@ -4,6 +4,7 @@ data-sly-use.footer="footer.html" prefix="og: http://ogp.me/ns#" style="overflow
 <head data-sly-call="${head.head}"></head>
 
 <body ng-app="fittanyUiApp" id="fittany-body" style="min-height:100%; top:0px; margin:0;">
+     <loader id="overlay"></loader>
 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SF49SF"
