--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/task.css
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/task.css
@@ -1,5 +1,4 @@
 
-
 .center-div{
     /* margin: auto;
     width: 35%; */
@@ -283,7 +282,7 @@ h1.large {
     margin-left: 1%;
     margin-right: 1%;
 }
-.congrats-image-container{
+/*.congrats-image-container{
     width: 200px;
     height: 200px;
     border: 1px solid grey;
@@ -291,11 +290,11 @@ h1.large {
     position: relative;
     left: 20%;
     background: #3a9de2;
-}
+}*/
 .congrats-image-container img{
     position: relative;
-    top: 60px;
-    left: 55px;
+    top: 25px;
+    left: 115px;
 }
 .congrats h3{
     color:#3a9de2;
@@ -336,8 +335,8 @@ h1.large {
     .congrats-hr-right{
         margin-left: 152px;
         }
-    .congrats-image-container{
-        left:5%;
+    .congrats-image-container img{
+        left:70px;
         }
     .canvas-container{
         margin-left: -30px
@@ -377,8 +376,8 @@ h1.large {
     }
 }
 @media only screen and (min-width : 768px) and (max-width:1024px) {
-    .congrats-image-container {
-        left: 40%;
+    .congrats-image-container img {
+        left: 420px;
     }
     .toggleTaskIcon{
         left: 48%;
@@ -394,8 +393,8 @@ h1.large {
     }
 }
 @media only screen and (min-width : 1025px) and (max-width: 1365px) {
-    .congrats-image-container {
-        left: 48%;
+    .congrats-image-container img {
+        left: 490px;
     }
     .congrats-text-container{
         padding-left: 155px;
@@ -414,11 +413,11 @@ h1.large {
     }
 }
 @media only screen and (min-width : 1366px) {
-    .congrats-image-container {
-        left: 50%;
+    .congrats-image-container img {
+        left: 590px;
     }
     .congrats-text-container{
-        padding-left: 220px;
+        padding-left: 160px;
       }
     .congrats-hr-left {
          margin-left: 175px;
