--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/login/login.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/login/login.html
@@ -1,7 +1,7 @@
-<div class="container fittany-form" id="login-form">
+<div class="fittany-form" id="login-form">
 	
 	<div class="row">
-		<div class="col-xs-12 col-sm-12">
+		<div >
 			<div class="well" ng-if="error">
 				<p style="color:red;">Error Message: {{message}}</p>
 			</div>
