--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/all.css
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/all.css
@@ -1,3 +1,4 @@
+
 #fittany-body .close{
 
     margin-top: -7px;
@@ -11,6 +12,12 @@
     opacity: 2.2;
 
 }
+
+.shadowborder{
+  box-shadow: 1px 3px 3px #888888;
+}
+
+
 
 .border{
     border: 3px solid blue;
