--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/layoutcontainer/layoutcontainer.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/layoutcontainer/layoutcontainer.html
@@ -2,7 +2,7 @@
 <sly data-sly-use.template="/apps/hha/dmxfla/empty-template.html"     data-sly-call="${template.placeholder}"></sly>
 
 <sly data-sly-test.fileRef="${properties.type =='image' && properties.fileReference}" />
-<section class="${properties.isFullWidth ? 'container-fluid-fullwidth layout-container' : 'container-fluid layout-container'} ${properties.layoutbackgroundtheme} ${properties.desktopmargin} ${properties.deskltrtmargin} ${properties.tabletmargin} ${properties.tabletltrtmargin} ${properties.mobilemargin} ${properties.mobileltrtmargin} ${properties.isHeroComponent ? 'section-hero':' '} ${properties.hideinmobile?'hideinMobile':''} ${properties.hideindesk?'hideinDesk':''}">
+<section class="${properties.isFullWidth ? 'container-fluid-fullwidth layout-container' : 'container-fluid layout-container'} ${properties.layoutbackgroundtheme} ${properties.desktopmargin} ${properties.deskltrtmargin} ${properties.tabletmargin} ${properties.tabletltrtmargin} ${properties.mobilemargin} ${properties.mobileltrtmargin} ${properties.isHeroComponent ? 'section-hero':' '} ${properties.hideinmobile?'hideinMobile':''} ${properties.hideindesk?'hideinDesk':''} ${properties.shadowborder?'shadowborder':''}    ">
 
 <sly data-sly-test="${properties.isContent}" style="max-width:1360px;margin:0 auto;">
 <sly data-sly-include="responsivegrid.html"></sly>
