--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/textmain/textmain.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/textmain/textmain.html
@@ -2,6 +2,6 @@
 
 <sly data-sly-use.template="/apps/hha/dmxfla/empty-template.html"     data-sly-call="${template.placeholder}"></sly>
 
-<section class="container-fluid ${properties.fontcolors} ${properties.hideinmobile?'hideinMobile':''} ${properties.hideindesk?'hideinDesk':''}">
+<section class="container-fluid ${properties.fontcolors} ${properties.textbcg} ${properties.hideinmobile?'hideinMobile':''} ${properties.hideindesk?'hideinDesk':''}">
 <sly data-sly-include="text.html" />
 </section>
