Bhim UI changes

--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/tasks/tasks.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/tasks/tasks.html
@@ -1,6 +1,6 @@
 
 <form name="myForm" ng-controller="TasksController">
-
+<congrats-component ng-if="congratsCard"></congrats-component>
     <div class="row" style="padding-top:25px;">
         <div class="col-xs-12">
             <h3 class="text-center">Hi {{user.customerFirstName}} {{user.customerLastName}}</h3>
