--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/all.css
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/dmxfla/content/all.css
@@ -1,4 +1,3 @@
-
 #fittany-body .close{
 
     margin-top: -7px;
@@ -13,12 +12,6 @@
 
 }
 
-.shadowborder{
-  box-shadow: 1px 3px 3px #888888;
-}
-
-
-
 .border{
     border: 3px solid blue;
 }
@@ -31,12 +24,13 @@ body {
     height:auto;
     margin:0;
     padding:0;
+    overflow-x: hidden;
 
 }
 
 .row {
-     margin-left:0 !important;
-     margin-right:0 !important;
+     margin-left:0;
+     margin-right:0;
 }
  .container-fluid{
      max-width: 1360px;
