--- a/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/adaptiveimage/adaptiveimage.html
+++ b/ui.apps/src/main/content/jcr_root/apps/hha/dmxfla/components/content/adaptiveimage/adaptiveimage.html
@@ -9,6 +9,7 @@
        data-title="${properties.title || properties.alt}" data-asset="${image.fileReference}" target="_blank">
         <noscript data-sly-unwrap="${!image.json}" data-cmp-image="${image.json}">
             <img src="${image}"
+            	 ui-sref="${properties.state}"
                  alt="${properties.alt || (properties.displayPopupTitle && properties.title) || true}"
                  title="${properties.displayPopupTitle && properties.title}"
 				 width="${properties.width}"
